# spatial-atlas

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  GUIDE.md  LICENSE  README.md  TUTORIAL.md  deploy_to_hf.sh  eval_smoke.py  pyproject.toml  sample.env
.claude/: launch.json
.github/workflows/: test-and-publish.yml
.well-known/: agent-card.json
paper/: spatial_atlas.md  spatial_atlas.tex
scenarios/fieldwork/: scenario.toml
scenarios/mlebench/: scenario.toml
src/: agent.py  config.py  executor.py  llm.py  server.py
src/cost/: router.py  tracker.py
src/entropy/: engine.py
src/fieldwork/: detector.py  formatter.py  handler.py  parser.py  reasoner.py  spatial.py  vision.py
src/mlebench/: analyzer.py  codegen.py  executor.py  handler.py
src/mlebench/strategies/: __init__.py  autogluon.py  general.py  leaks.py  nlp.py  tabular.py  timeseries.py  vision_ml.py
tests/: conftest.py  test_agent.py
